# Programming-I-Final-Project

./: main.py  pyproject.toml  replit.nix
real_estate_toolkit/agent_based_model/: consumers.py  house_market.py  simulation.py
real_estate_toolkit/analytics/: exploratory.py
real_estate_toolkit/ml_models/: predictor.py
real_estate_toolkit/ml_models/outputs/: submission.csv
