[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "numpy==2.1.3",
    "pandas==2.2.3",
    "plotly==5.24.1",
    "polars==1.14.0",
    "pytest==8.3.3",
    "scikit-learn==1.5.2",
    "statistics==1.0.3.5",
    "statsmodels>=0.14.4",
    "typing==3.10.0.0",
]
